--- a/blocks/form/components/range/range.css
+++ b/blocks/form/components/range/range.css
@@ -20,6 +20,7 @@ main .form .range-widget-wrapper.decorated input[type="range"]:focus {
     border-radius: 50%;
     background: #1c3fca;
     border: 2px solid #fff;
+    cursor: pointer;
 }
  
 .range-widget-wrapper.decorated input[type="range"]:focus::-webkit-slider-thumb {
