--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,20 +1,25 @@
 footer {
-  background-color: var(--light-color);
-  font-size: var(--body-font-size-xs);
+    background: #09153a;
+    height: 40px !important;
 }
 
-footer .footer > div {
-  margin: auto;
-  max-width: 1200px;
-  padding: 40px 24px 24px;
+footer .footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
 }
 
-footer .footer p {
+p.footnote {
+  color: white;
   margin: 0;
 }
 
-@media (width >= 900px) {
-  footer .footer > div {
-    padding: 40px 32px 24px;
-  }
+
+.footer-wrapper {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
 }
